<?xml version="1.0" encoding="utf-8"?>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	  
	    	
		    <RelativeLayout 
		        	android:id="@+id/upper_layout"
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:padding="15dp"
		    		>
		    		
			        
		    		
				    <ImageView
					       android:id="@+id/profile_image"
					       android:layout_width="100dp"
					       android:layout_height="100dp"
					       android:layout_alignParentTop="true"
					       android:layout_alignParentLeft="true"
					       />
				    
			       <TextView android:id="@+id/name"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_toRightOf="@id/profile_image"
					        android:textStyle="bold"
					        android:layout_marginLeft="16dp"
					        android:textColor="#000000" 
					        android:textSize="22dp"
					        android:text=""/>
			       
			       <TextView android:id="@+id/level"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_toRightOf="@id/profile_image"
				            android:layout_below="@+id/name"
				            android:layout_marginLeft="16dp"
					        android:textStyle="bold"
					        android:textColor="@color/green" 
					        android:textSize="18dp"
					        android:text=""/>
			   </RelativeLayout>
				       
		       <ImageView
			       android:id="@+id/profile_separator"
			       android:layout_width="fill_parent"
			       android:layout_height="50dp"
			       android:layout_below="@+id/upper_layout"
			       android:background="@color/orange"/>
		   
				<TextView
				    android:id="@+id/myImageViewText"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignLeft="@+id/profile_separator"
				    android:layout_alignTop="@+id/profile_separator"
				    android:layout_alignRight="@+id/profile_separator"
				    android:layout_alignBottom="@+id/profile_separator"
				    android:layout_margin="1dp"
				    android:gravity="center"
				    android:textSize="20dp"
				    android:text="@string/about_me"
				    android:textColor="@color/white" />
				
				<RelativeLayout 
		        	android:id="@+id/about_me_layout"
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:layout_below="@+id/profile_separator"
		    		android:padding="15dp">
		
				    
			       <TextView android:id="@+id/favorite_dishes"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
					        android:textStyle="bold"
					        android:layout_alignParentTop="true"
					        android:layout_alignParentLeft="true"
					        android:textSize="18dp"
					        android:textColor="@color/dark_orange"
					        android:text="@string/favorite_citchen"/>
			       
			       <TextView android:id="@+id/favorite_dishes_data"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_below="@+id/favorite_dishes"
					        android:textSize="18dp"
					        android:text=""/>
			       
			       
			        <TextView android:id="@+id/hobbies"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
					        android:textStyle="bold"
					        android:layout_marginTop="8dp"
					        android:layout_below="@+id/favorite_dishes_data"
					        android:layout_alignParentLeft="true"
					        android:textSize="18dp"
					        android:textColor="@color/dark_orange"
					        android:text="@string/hobbies"/>
			       
			       <TextView android:id="@+id/hobbies_data"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_below="@+id/hobbies"
					        android:textSize="18dp"
					        android:text=""/>
			       
			       
			       
			       <TextView android:id="@+id/interests"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
					        android:textStyle="bold"
					        android:layout_marginTop="8dp"
					        android:layout_below="@+id/hobbies_data"
					        android:layout_alignParentLeft="true"
					        android:textSize="18dp"
					        android:textColor="@color/dark_orange"
					        android:text="@string/cook_interests"/>
			       
			       <TextView android:id="@+id/interests_data"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_below="@+id/interests"
					        android:textSize="18dp"
					        android:text=""/>
			       
			       
			       
			       <TextView android:id="@+id/experience"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
					        android:textStyle="bold"
					        android:layout_marginTop="8dp"
					        android:layout_below="@+id/interests_data"
					        android:layout_alignParentLeft="true"
					        android:textSize="18dp"
					        android:textColor="@color/dark_orange"
					        android:text="@string/experience"/>
			       
			       <TextView android:id="@+id/experience_data"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_below="@+id/experience"
					        android:textSize="18dp"
					        android:text=""/>
			       
			       
			       
			       <TextView android:id="@+id/about"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
					        android:textStyle="bold"
					        android:layout_marginTop="8dp"
					        android:layout_below="@+id/experience_data"
					        android:layout_alignParentLeft="true"
					        android:textSize="18dp"
					        android:textColor="@color/dark_orange"
					        android:text="@string/about_myself"/>
			       
			       <TextView android:id="@+id/about_data"
						    android:layout_width="wrap_content"
				            android:layout_height="wrap_content" 
				            android:layout_below="@+id/about"
					        android:textSize="18dp"
					        android:text=""/>
			       
			    
			   </RelativeLayout>
			   
			 <ImageView
			       android:id="@+id/statistic_separator"
			       android:layout_width="fill_parent"
			       android:layout_height="50dp"
			       android:layout_below="@+id/about_me_layout"
			       android:background="@color/orange"/>
		   
				<TextView
				    android:id="@+id/myImageViewText1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignLeft="@+id/statistic_separator"
				    android:layout_alignTop="@+id/statistic_separator"
				    android:layout_alignRight="@+id/statistic_separator"
				    android:layout_alignBottom="@+id/statistic_separator"
				    android:layout_margin="1dp"
				    android:gravity="center"
				    android:textSize="20dp"
				    android:text="@string/statistic"
				    android:textColor="@color/white" />
				
				
			
			<FrameLayout 
			    android:id="@+id/published_recepies_frame"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/statistic_separator"
			    android:paddingLeft="15dp"
			    android:paddingRight="15dp"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:background="@android:color/white" >
			
			    <TextView
			        android:id="@+id/text"
			        android:layout_width="fill_parent"
			        android:layout_height="match_parent"
			        android:layout_gravity="center"
			        android:background="@android:color/white"
			        android:singleLine="true"
			        android:text="......................................................................................................................................................................"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			    <TextView
			        android:id="@+id/published_recepies"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="left"
			        android:background="@android:color/white"
			        android:textStyle="bold"
			  		android:text="@string/published_recipes"
			  		android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			    <TextView
			        android:id="@+id/published_recepies_data"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="right"
			        android:background="@android:color/white"
			        android:text="0"
			        android:textStyle="bold"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			</FrameLayout>
			
			<FrameLayout 
			    android:id="@+id/added_to_favorites_frame"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/published_recepies_frame"
			    android:paddingLeft="15dp"
			    android:paddingRight="15dp"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:background="@android:color/white" >
			
			    <TextView
			        android:id="@+id/text"
			        android:layout_width="fill_parent"
			        android:layout_height="match_parent"
			        android:layout_gravity="center"
			        android:background="@android:color/white"
			        android:singleLine="true"
			        android:text="......................................................................................................................................................................"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip"/>
			
			    <TextView
			        android:id="@+id/added_to_favorites"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="left"
			        android:background="@android:color/white"
			        android:textStyle="bold"
			  		android:text="@string/added_to_favorites"
			  		android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			    <TextView
			        android:id="@+id/added_to_favorites_data"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="right"
			        android:background="@android:color/white"
			        android:text="0"
			        android:textStyle="bold"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			</FrameLayout>
			
			<FrameLayout 
				    android:id="@+id/comments_left_frame"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_below="@+id/added_to_favorites_frame"
				    android:paddingLeft="15dp"
				    android:paddingRight="15dp"
				    android:paddingTop="5dp"
				    android:paddingBottom="5dp"
				    android:background="@android:color/white" >
			
			    <TextView
			        android:id="@+id/text"
			        android:layout_width="fill_parent"
			        android:layout_height="match_parent"
			        android:layout_gravity="center"
			        android:background="@android:color/white"
			        android:singleLine="true"
			        android:text="......................................................................................................................................................................"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip"/>
			
			    <TextView
			        android:id="@+id/comments_left"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="left"
			        android:background="@android:color/white"
			        android:textStyle="bold"
			  		android:text="@string/comments_left"
			  		android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			    <TextView
			        android:id="@+id/comments_left_data"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="right"
			        android:background="@android:color/white"
			        android:text="0"
			        android:textStyle="bold"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			</FrameLayout>
			
			<FrameLayout 
				    android:id="@+id/voices_left_frame"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_below="@+id/comments_left_frame"
				    android:paddingLeft="15dp"
				    android:paddingRight="15dp"
				    android:paddingTop="5dp"
				    android:paddingBottom="5dp"
				    android:background="@android:color/white" >
			
			    <TextView
			        android:id="@+id/text"
			        android:layout_width="fill_parent"
			        android:layout_height="match_parent"
			        android:layout_gravity="center"
			        android:background="@android:color/white"
			        android:singleLine="true"
			        android:text="......................................................................................................................................................................"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip"/>
			
			    <TextView
			        android:id="@+id/voices_left"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="left"
			        android:background="@android:color/white"
			        android:textStyle="bold"
			  		android:text="@string/voices_left"
			  		android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			    <TextView
			        android:id="@+id/voices_left_data"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="right"
			        android:background="@android:color/white"
			        android:text="0"
			        android:textStyle="bold"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			</FrameLayout>
			
			
			<FrameLayout 
				    android:id="@+id/friends_frame"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_below="@+id/voices_left_frame"
				    android:paddingLeft="15dp"
				    android:paddingRight="15dp"
				    android:paddingTop="5dp"
				    android:paddingBottom="5dp"
				    android:background="@android:color/white" >
			
			    <TextView
			        android:id="@+id/text"
			        android:layout_width="fill_parent"
			        android:layout_height="match_parent"
			        android:layout_gravity="center"
			        android:background="@android:color/white"
			        android:singleLine="true"
			        android:text="......................................................................................................................................................................"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip"/>
			
			    <TextView
			        android:id="@+id/friends"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="left"
			        android:background="@android:color/white"
			        android:textStyle="bold"
			  		android:text="@string/friends_total"
			  		android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			
			    <TextView
			        android:id="@+id/friends_data"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:layout_gravity="right"
			        android:background="@android:color/white"
			        android:text="0"
			        android:textStyle="bold"
			        android:textColor="@color/dark_orange"
			        android:textSize="18dip" />
			</FrameLayout>			
			
	</RelativeLayout>
 </ScrollView>